<resources>
    <string name="app_name">Class Math</string>
    <string name="logo">Logo</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_menu_1">Selamat Datang Di ClassMath!</string>
    <string name="title_menu_2">Materi PDF Interaktif</string>
    <string name="title_menu_3">Latihan Soal Seru!</string>
    <string name="title_menu_4">Siap Untuk Mulai Belajar?</string>
    <string name="desc_menu_1">Selamat datang di ClassMath! Aplikasi matematika untuk SD kelas 1–6. Mari belajar matematika dengan cara yang menyenangkan!</string>
    <string name="desc_menu_2">Dapatkan materi PDF interaktif dengan ilustrasi menarik untuk belajar matematika dengan mudah.</string>
    <string name="desc_menu_3">Asah kemampuan matematika dengan latihan soal yang seru dan menantang.</string>
    <string name="desc_menu_4">Daftarkan dirimu sekarang untuk memulai perjalanan matematikamu! Tekan tombol "Belajar Sekarang" di bawah.</string>
    <string name="btn_study_now">Belajar Sekarang</string>
    <string name="content_description_image_welcome_1">Gambar Selamat Datang</string>
    <string name="content_description_image_welcome_2">Gambar Materi PDF Interaktif</string>
    <string name="content_description_image_welcome_3">Gambar Latihan Soal Seru</string>
    <string name="content_description_image_welcome_4">Gambar Siap Untuk Belajar Meraih Prestasi</string>
    <string name="content_description_image_login">Gambar Login</string>
    <string name="content_description_image_register">Gambar Register</string>
    <string name="username_input">Username</string>
    <string name="password_input">Kata Sandi</string>
    <string name="name_input">Nama</string>
    <string name="login">Masuk</string>
    <string name="or">Atau</string>
    <string name="register">Daftar</string>
    <string name="error_input_name">Nama harus minimal 3 karakter</string>
    <string name="error_input_username">Username harus minimal 5 karakter</string>
    <string name="error_input_password">Kata sandi harus minimal 8 karakter</string>
    <string name="username_is_already_taken">Username sudah digunakan, harap masukkan username lainnya.</string>
    <string name="success_register">Pendaftaran Berhasil!</string>
    <string name="failed_register">Pendaftaran Gagal!</string>
    <string name="ok">OK</string>
    <string name="dialog_success_register">Akun dengan username %1$s berhasil didaftarkan, silahkan lanjut Masuk</string>
    <string name="dialog_success_login">Anda berhasil login, Sudah tidak sabar berbagi cerita yaa!</string>
    <string name="dialog_failed_register">Pendaftaran gagal. Silahkan periksa kembali input Anda dan coba lagi.</string>
    <string name="dialog_failed_login">Masuk gagal. Silahkan periksa kembali input Anda dan coba lagi.</string>
    <string name="success_login">Berhasil Masuk!</string>
    <string name="failed_login">Masuk Gagal!</string>
    <string name="profile">Profil</string>
    <string name="name_profile">Nama Profil</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="exit">Keluar</string>
    <string name="description">Deskripsi</string>
    <string name="logout">Keluar!</string>
    <string name="logout_description">Apakah Anda ingin Keluar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="detail_profile">Detail Akun</string>
    <string name="favorit_materi">Favorit Materi</string>
    <string name="icon_detail_akun">Icon Detail Akun</string>
    <string name="icon_favorit_materi">Icon Favorit Materi</string>
    <string name="icon_mode_gelap">Icon Mode Gelap</string>
    <string name="image_button_forwad">Image Button Forward</string>
    <string name="halo">Halo</string>
    <string name="search_hint">Cari Materi Matematika?</string>
    <string name="btn_materi">button materi</string>
    <string name="btn_soal">button soal</string>
    <string name="tv_materi">Materi</string>
    <string name="tv_soal">Soal</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="point">%1$d Points</string>
    <string name="empty_list">Daftar Kosong</string>
    <string name="history">Riwayat Belajar</string>
    <string name="nama_materi">Nama Materi</string>
    <string name="grade">Kelas</string>
    <string name="image_materi">image materi</string>
    <string name="image_forward">image forward</string>
    <string name="list_class">Daftar Kelas</string>
    <string name="list_materi">Materi Kelas</string>
    <string name="list_favorit_materi">Favorit Materi</string>
    <string name="simpan">Simpan</string>
    <string name="success_update">Berhasil Update Data!</string>
    <string name="failed_update">Gagal Update Data</string>
    <string name="dialog_success_update">Data Akun Anda berhasil diupdate, semoga lebih aman</string>
    <string name="dialog_failed_update">Silakan cek input data Anda kembali, jangan sampai kosong yaa</string>
    <string name="materi_pdf">Materi PDF</string>
    <string name="list_soal_materi">Daftar Soal Materi</string>
    <string name="no_soal">1/10</string>
    <string name="btn_back">tombol halaman sebelumnya</string>
    <string name="btn_forward">tombol halaman setelahnya</string>
    <string name="image_soal">Image Soal</string>
    <string name="jawaban1">AKU BISA</string>
    <string name="jawaban2">AKU BISA MATEMATIKA</string>
    <string name="jawaban3">AKU BISA MATEMATIKA HEBAT</string>
    <string name="jawaban4">AKU BISA MATEMATIKA MANTAP</string>
    <string name="tv_result">Hasil</string>
    <string name="title_result_quiz">Nilai Quiz:</string>
    <string name="result_quiz">0</string>
    <string name="image_correct">image correct</string>
    <string name="image_wrong">image wrong</string>
    <string name="image_no_answer">image no answer</string>
    <string name="tv_correct">Benar</string>
    <string name="tv_wrong">Salah</string>
    <string name="tv_no_answer">Belum\nDijawab</string>
    <string name="result_correct">0</string>
    <string name="result_wrong">0</string>
    <string name="result_no_answer">0</string>
    <string name="back">Kembali</string>
    <string name="finish">Akhiri Quiz</string>
    <string name="dialog_quiz">Apakah anda ingin mengakhiri latihan soal?</string>
    <string name="search_title">Hasil Pencarian</string>
    <string name="to_soal">Latihan Soal</string>
</resources>