<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.soal.ResultQuizActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.Material3.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/tv_result"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_result_quiz"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="?attr/colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:id="@+id/title_value_quiz"
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="top|center"
            android:text="@string/title_result_quiz" />

        <TextView
            android:id="@+id/value_quiz"
            style="@style/TextAppearance.MdcTypographyStyles.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/result_quiz" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_correct"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        app:cardBackgroundColor="?attr/colorSurfaceVariant"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_result_quiz">

        <ImageView
            android:id="@+id/image_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:src="@drawable/check_circle_24"
            android:layout_gravity="top|center"
            android:contentDescription="@string/image_correct" />

        <TextView
            android:id="@+id/title_correct"
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="60dp"
            android:text="@string/tv_correct" />

        <TextView
            android:id="@+id/value_correct"
            style="@style/TextAppearance.MdcTypographyStyles.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/result_correct"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_wrong"
        android:layout_width="110dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="?attr/colorSurfaceVariant"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/card_not_answer"
        app:layout_constraintStart_toEndOf="@+id/card_correct"
        app:layout_constraintTop_toTopOf="@+id/card_correct">

        <ImageView
            android:id="@+id/image_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/image_wrong"
            android:src="@drawable/dangerous_24" />

        <TextView
            android:id="@+id/title_wrong"
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="60dp"
            android:text="@string/tv_wrong" />

        <TextView
            android:id="@+id/value_wrong"
            style="@style/TextAppearance.MdcTypographyStyles.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/result_wrong"
            android:textColor="?attr/colorError"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_not_answer"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="?attr/colorSurfaceVariant"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_wrong">

        <ImageView
            android:id="@+id/image_no_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/image_no_answer"
            android:src="@drawable/help_24" />

        <TextView
            android:id="@+id/title_no_answer"
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:textAlignment="center"
            android:layout_marginTop="55dp"
            android:text="@string/tv_no_answer" />

        <TextView
            android:id="@+id/value_no_answer"
            style="@style/TextAppearance.MdcTypographyStyles.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/result_no_answer"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        app:icon="@drawable/home_24"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_wrong" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>