<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="16dp">


    <ImageView
        android:id="@+id/imgUser"
        tools:src="@tools:sample/avatars"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/image_materi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgUser"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/nama_materi" />

    <ImageView
        android:id="@+id/image_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_forward"
        app:layout_constraintBottom_toBottomOf="@+id/tvUser"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintTop_toTopOf="@+id/tvUser"/>

</androidx.constraintlayout.widget.ConstraintLayout>