<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.Material3.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:titleCentered="true"
            app:title="@string/profile" />
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgDetailUser"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:src="@drawable/profile_foto"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tvNameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:text="@string/name_profile"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetailUser"/>

    <ImageView
        android:id="@+id/imageIconDetailProfile"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="63dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/icon_detail_akun"
        app:layout_constraintTop_toBottomOf="@+id/tvNameUser" />

    <TextView
        android:id="@+id/tvDetailProfile"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/detail_profile"
        app:layout_constraintBottom_toBottomOf="@+id/imageIconDetailProfile"
        app:layout_constraintStart_toEndOf="@+id/imageIconDetailProfile"
        app:layout_constraintTop_toTopOf="@+id/imageIconDetailProfile"/>

    <ImageButton
        android:id="@+id/btnDetailAkun"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/image_button_forwad"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageIconDetailProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageIconDetailProfile" />


    <ImageView
        android:id="@+id/imageFavoritMateri"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/baseline_bookmark_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageIconDetailProfile"
        android:contentDescription="@string/image_button_forwad" />

    <TextView
        android:id="@+id/tvFavoritMateri"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/favorit_materi"
        app:layout_constraintBottom_toBottomOf="@+id/imageFavoritMateri"
        app:layout_constraintStart_toEndOf="@+id/imageFavoritMateri"
        app:layout_constraintTop_toTopOf="@+id/imageFavoritMateri" />

    <ImageButton
        android:id="@+id/btnFavoritMateri"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageFavoritMateri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageFavoritMateri"
        android:contentDescription="@string/image_button_forwad" />


    <ImageView
        android:id="@+id/imageDarkMode"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/baseline_dark_mode_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFavoritMateri"
        android:contentDescription="@string/icon_mode_gelap" />

    <TextView
        android:id="@+id/darkMode"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/dark_mode"
        app:layout_constraintBottom_toBottomOf="@+id/imageDarkMode"
        app:layout_constraintStart_toEndOf="@+id/imageDarkMode"
        app:layout_constraintTop_toTopOf="@+id/imageDarkMode" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/darkMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/darkMode"
        app:thumbIcon="@drawable/baseline_dark_mode_24" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDarkMode" />

</androidx.constraintlayout.widget.ConstraintLayout>